--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	<form id="form1" onsubmit="getFormvalue()">
 		First name: <input type="text" id="firstname" name="fname"><br>
 		Last name: <input type="text" id="lastname" name="lname"><br>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit" onclick="on">
 	</form>
 	
     <script type="text/javascript" src="./script.js">
